--- a/src/generic.scss
+++ b/src/generic.scss
@@ -7,3 +7,7 @@
 .bigText {
 	font-size: $body-font-size * 0.95;
 }
+
+.tight {
+	line-height: $body-line-height * 0.8;
+}
