--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	margin-block-end: $body-font-size/1.5;
+	margin-block-end: $body-font-size;
 }
 
 h1 {
@@ -20,7 +20,7 @@ h3 {
 	font-size: $body-font-size * 1.2;
 }
 
-p, img, figure {
+p, img, figure, ul {
 	margin-block-end: $body-line-height;
 }
 
